=============================== 
IvyAddons 5001200 Release Notes 
===============================

=============================== 
IvyAddons 5001100 Release Notes 
===============================
* Issue #24937: Filemanager with Oracle DB - NPE if file has 0 byte
* Issue #24938: Filemanager directory translation feature - the directories are displayed without translation after calling the RDC setServerPath method.
* Issue #24946: Filemanager Oracle Db - Directory translation activated. Rename directory function throws NPE if the directory has no translation in the user language.
* Issue #24947: Filemanager PostgreSQL version 9.0 and below - files stored on the server file system. SQL Exception "unterminated quoted String at or near "'\'" if path contains "_" char
* Issue #24951: IvyAddons - FileListTable RDC Pb with Scrollbar after resizing the window. The scrollbar will not be displayed as needed.

New: presence of a pom.xml for maven build.

=============================== 
IvyAddons 5001000 Release Notes 
===============================

* Issue #24900 (Bug): Filemanager, the use of the getDirectory API function NPE may be thrown with security activated and folder does not exist.
* Issue #24901: Ivyaddons, old POI 3.2 jar must be deleted as it was replaced by the newest one - 3.9 version.
* Issue #24914: There are few GUI bugs and improvements needs in the FileListTable RDC:
			- the MenuItems for delete, edit, unlock file should not be enabled if no document is selected,
			- the setToolbarVisible function does not work. (the toolbar remains visible),
			- set readOnly function: the delete, unlock and upload buttons and menu items should not be visible.
* Issue #24918 (Bug): SimpleFileChooserDialog store Files in DB + security activated: Exception in Filemanagement System after uploading a file in new directory 			
* Issue #24919 (Improvement): Div. RDCs File management Buttons are not rendered properly with Xpertline Look And Feel.